--- a/frontend/details.html
+++ b/frontend/details.html
@@ -10,20 +10,27 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
-  <script defer src="details.js"></script>
+  <script defer type="module" src="details.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.15.2/dist/cdn.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container my-5" x-data="detailsApp()" x-init="init()">
-    <h1>Image Details</h1>
     <template x-if="image">
         <div class="container my-5">
-            <div class="card h-100 mb-4 shadow-sm">
-                <img :src="'/' + image.original_image_path" class="card-img-top" alt="Image not found">
-                <div class="card-body">
-                    <h1 class="card-title text-center" x-text="'Image ID: ' + image.id"></h1>
+            <h2 class="mb-3">Original Image</h2>
+            <div class="card mb-4 shadow-sm">
+                <div class="row g-0 ">
+                    <div class="col-3">
+                    <img :src="'/' + image.original_image_path" class="img-fluid rounded-start" alt="Image not found" style="width: 100%; height: auto; object-fit: cover;">
+                    </div>
+                    <div class="col-9">
+                    <div class="card-body">
+                        <p class="mb-1 text-muted fs-6"><strong>ID:</strong> <span x-text="image.id"></span></p>
+                        <p class="mb-0 text-muted fs-6"><strong>Created:</strong> <span x-text="image.created_at"></span></p>
+                    </div>
+                    </div>
                 </div>
             </div>
 
@@ -34,12 +41,35 @@
                         <div class="card h-100 shadow-sm">
                             <img :src="'/' + mod.modified_image_path" class="card-img-top" alt="Modified image">
                             <div class="card-body">
-                                <p class="card-text text-truncate" x-text="mod.modified_image_path"></p>
+                                <p class="mb-1 text-muted fs-6"><strong>ID:</strong> <span x-text="mod.id"></span></p>
+                                <p class="mb-0 text-muted fs-6"><strong>Created:</strong> <span x-text="mod.created_at"></span></p>
+                                <p class="mb-0 text-muted fs-6"><strong>Modification Algorithm:</strong> <span x-text="mod.modification_algorithm"></span></p>
+                                <p class="mb-0 text-muted fs-6"><strong>Number of Modifications:</strong> <span x-text="mod.num_modifications"></span></p>
+                                <p class="mb-0 text-muted fs-6">
+                                    <strong>Verification status:</strong>
+                                    <span
+                                        x-text="mod.verification_status"
+                                        :class="{
+                                        'badge bg-warning text-dark': mod.verification_status === 'pending',
+                                        'badge bg-success':           mod.verification_status === true || mod.verification_status === 'true',
+                                        'badge bg-danger':            mod.verification_status === false || mod.verification_status === 'false'
+                                        }"
+                                    ></span>
+                                </p>
+                                <p class="mb-0 text-muted fs-6"><strong>Verified:</strong> <span x-text="mod.verified_at"></span></p>
                             </div>
                         </div>
                     </div>
                 </template>
             </div>
+        </div>
+    </template>
+    <template x-if="error">
+        <div class="alert alert-warning d-flex align-items-center" role="alert">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+            <div x-text="error"></div>
         </div>
     </template>
   </div>
