Changed in ui message Uploading to Modifying

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,7 @@
     <span x-show="!isUploading" x-cloak>Upload</span>
     <span x-show="isUploading" x-cloak>
       <span class="spinner-border spinner-border-sm me-1" role="status" aria-hidden="true"></span>
-      Uploading…
+      Modifying...
     </span>
   </button>
 </form>
